--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   intl: 0.15.7 # for date, time
   dynamic_theme: ^1.0.1 # for dynamically changing theme
   audioplayers: ^0.12.0 # to play audio
+  shared_preferences: ^0.5.0 # for local storage
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +43,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/White-noise-rain-sound.mp3
 
   # To add assets to your application, add an assets section, like this:
   # assets:
