new app icon, and sleepy dog picture! ^_^

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.2"
 
+# run `flutter pub pub run flutter_launcher_icons:main` to generate them for android and ios
+flutter_icons:
+  image_path: "icon/sleepAppIcon2.png" 
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
