--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   intl: 0.15.7 # for date, time
-  shared_preferences: ^0.5.0 # for local storage
+  numberpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
